# metagallery-near-contract

./: LICENSE  README.md
ft/: Cargo.toml  deploy-dev.sh  deploy-test.sh
ft/src/: lib.rs
nft/: Cargo.toml  build.sh  deploy-test.sh
nft-contract/: Cargo.toml  build.sh  deploy-test.sh
nft-contract/src/: enumeration.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs
nft/src/: lib.rs
